# zcas

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
conf/: zcas.conf  zcfc.conf
data/: bmd.txt
data/license/: ICU_License.html  ZCAS_License.txt  zclicense
include/: zcfc.h  zcfc_struct.h
lib/linux64/lib/: libicuuc.so.51  libzcfc.la  libzcfc.so.0
src/common/: zcas_common.c  zcas_common.h
src/test/: Makefile  Makefile.am  Makefile.am~  Makefile.in  zcas_test.c
src/test/.deps/: article-test_article.Po  example-zcas_test.Po  testencoding-test_encoding.Po  zcas-test_article.Po  zcas-zcas_test.Po
src/tools/license/: Makefile  Makefile.am  Makefile.in  md5.c  md5.h  zctool_license.c  zctool_license.h  zctool_test.c
src/tools/license/.deps/: libzclicense_la-md5.Plo  libzclicense_la-zctool_license.Plo  licensetool-md5.Po  licensetool-zctool_license.Po  licensetool-zctool_test.Po
src/zcas/: Makefile  Makefile.am  Makefile.in  zcas.h  zcas_head.h  zcas_init.c  zcas_init.h  zcas_interface.h  zcas_paragraph.c  zcas_paragraph.h  zcas_part.c  zcas_part.h  zcas_result.c  zcas_result.h  zcas_sentence.c  zcas_sentence.h  zcas_struct.h  zcas_summary.c  zcas_summary.h  zcas_vector.c  zcas_vector.h
src/zcas/.deps/: libzcas_la-zcas_common.Plo  libzcas_la-zcas_init.Plo  libzcas_la-zcas_paragraph.Plo  libzcas_la-zcas_part.Plo  libzcas_la-zcas_result.Plo  libzcas_la-zcas_sentence.Plo  libzcas_la-zcas_summary.Plo  libzcas_la-zcas_vector.Plo  libzcas_la-zctool_license.Plo
